--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
           <div class="container">
             <div class="main_title">
               <h2>Community driven</h2>
-              <p class="justified large"> SpeechBrain has been designed and developped to help researchers. In this extent, the futur of SpeechBrain highly depends on this community. Anyone can clone the code, develop its own branch
+              <p class="justified large"> SpeechBrain has been designed and developed to help researchers. In this extent, the future of SpeechBrain highly depends on this community. Anyone can clone the code, develop its own branch
                , raise issues or create new discussion. With SpeechBrain we hope to start a symbiotic relationships between the toolkit and the research community. </p>
             </div>
             <div class="main_title">
@@ -94,7 +94,7 @@
                 <pre>
                   <code class="text">
   @misc{SB2021,
-    author = {Ravanelli, Mirco and Parcollet, Titouan and Rouhe, Aku and Plantinga, Peter and Rastorgueva, Elena and Lugosh, Loren and Dawalatabad, Nauman and Ju-Chieh, Chou and Heba, Abdel and Grondin, Francois and Aris, William and Liao, Chien-Feng and Cornell, Samuele and Yeh, Sung-Lin and Na, Hwidong and Gao, Yan and Fu, Szu-Wei and Subakan, Cem and De Mori, Renato and Bengio, Yoshua },
+    author = {Ravanelli, Mirco and Parcollet, Titouan and Rouhe, Aku and Plantinga, Peter and Rastorgueva, Elena and Lugosch, Loren and Dawalatabad, Nauman and Ju-Chieh, Chou and Heba, Abdel and Grondin, Francois and Aris, William and Liao, Chien-Feng and Cornell, Samuele and Yeh, Sung-Lin and Na, Hwidong and Gao, Yan and Fu, Szu-Wei and Subakan, Cem and De Mori, Renato and Bengio, Yoshua },
     title = {SpeechBrain},
     year = {2021},
     publisher = {GitHub},
@@ -109,7 +109,7 @@
               <h2>Licence</h2>
               <p class="justified large">SpeechBrain is released under the Apache license, version 2.0. The Apache license is a popular <em>BSD-like</em> license. SpeechBrain can be redistributed for free, even for commercial purposes, although you can not take off the license headers (and under some circumstances you may have to distribute a license document). Apache is not a <em>viral</em> license like the GPL, which forces you to release your modifications to the source code. Also note that this project has no connection to the Apache Foundation, other than that we use the same license terms.</p><br/>
 
-              <p class="justified large">From a legal and copyright point of view, SpeechBrain has been created by Dr. Ravanelli Mirco and Dr. Parcollet Titouan. There is no legal institution associated as an <em> owner </em> of SpeechBrain.
+              <p class="justified large">From a legal and copyright point of view, SpeechBrain has been created by Dr. Mirco Ravanelli and Dr. Titouan Parcollet. There is no legal institution associated as an <em> owner </em> of SpeechBrain.
                 Furthermore, and due to the Apache Licence, anyone that would disagree with the way the project is being run can fork it and start a new toolkit as long as its name isn't SpeechBrain.</p>
             </div>
             <div class="main_title">
@@ -146,7 +146,7 @@
               propose this toolkit.</p>
             </div>
             <ul class="contributors-list">
-              <li>Mirco Ravanelli, MILA, Montréal (CA)</li>
+              <li>Mirco Ravanelli, Mila, Montréal (CA)</li>
               <li>Titouan Parcollet, Avignon Université (LIA, FR)</li>
               <li>Aku Rouhe, Aalto University (FI)</li>
               <li>Peter Plantinga, Ohio State University (USA)</li>
