--- a/about.html
+++ b/about.html
@@ -45,7 +45,6 @@
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials</a>
 									<ul class="dropdown-menu">
                     <li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
-										<li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
 									</ul>
 								</li>
@@ -77,16 +76,19 @@
           <div class="container">
             <div class="main_title">
               <h2>Community driven</h2>
-              <p class="justified large"> SpeechBrain has been designed and developped to help researchers. In this extent, the futur of SpeechBrain highly depends on this community. Anyone can clone the code, develop its own branch
-               , raise issues or create new discussion. With SpeechBrain we hope to start a symbiotic relationships between the toolkit and the research community. </p>
+              <p class="justified large">SpeechBrain has been designed to help researchers and developers.
+                The future of SpeechBrain highly depends on this community engagement.
+                Anyone can clone the code, develop new functionalities, raise issues, or create a new discussion.
+                With SpeechBrain we hope to start a symbiotic relationship between the toolkit and the research community. </p>
             </div>
             <div class="main_title">
               <h2>Contributing to SpeechBrain</h2>
-              <p class="justified large"> Contributions can take various forms. Sponsors and partners may contribute financially or with human resources by simply contacting us via <a href="mailto:speechbrainproject@gmail.com"> e-mail </a>. Then, individual researchers, companies or labs can simply
-                propose new functionalities throughtout the <a href="">GitHub repository</a> with pull requests or issues. While anyone can create a pull request for its own code to be integrated in the toolkit, it remains
-                crucial for us to maintain high quality standards for SpeechBrain. Therefore, each new pull request will be reviewed by SpeechBrain members and will be required to meet different requirements as detailled in the
-                <em> README </em> of the repository. <b> SpeechBrain needs you to evolve and we do not wish to create a tool that is only maintained by few indivuals </b>.
+              <p class="justified large"> Contributions can take various forms:<br/>
+                  1. Researchers can propose and implement new functionalities through pull requests. To ensure high-quality standards, each new pull request will be reviewed by a core team member.<br/>
+                  2. Sponsors can contribute financially or with human resources by contacting us via <a href="mailto:speechbrainproject@gmail.com"> email </a><br/><br/>
+                  <b>SpeechBrain needs you to evolve!</b>
               </p>
+
             </div>
             <div class="main_title">
               <h2>Referencing SpeechBrain</h2>
@@ -106,8 +108,8 @@
               </div>
             </div>
             <div class="main_title">
-              <h2>Licence</h2>
-              <p class="justified large">SpeechBrain is released under the Apache license, version 2.0. The Apache license is a popular <em>BSD-like</em> license. SpeechBrain can be redistributed for free, even for commercial purposes, although you can not take off the license headers (and under some circumstances you may have to distribute a license document). Apache is not a <em>viral</em> license like the GPL, which forces you to release your modifications to the source code. Also note that this project has no connection to the Apache Foundation, other than that we use the same license terms.</p><br/>
+              <h2>License</h2>
+              <p class="justified large">SpeechBrain is released under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache license, version 2.0</a>. The Apache license is a popular <em>BSD-like</em> license. SpeechBrain can be redistributed for free, even for commercial purposes, although you can not take off the license headers (and under some circumstances you may have to distribute a license document). Apache is not a <em>viral</em> license like the GPL, which forces you to release your modifications to the source code. Also note that this project has no connection to the Apache Foundation, other than that we use the same license terms.</p><br/>
 
               <p class="justified large">From a legal and copyright point of view, SpeechBrain has been created by Dr. Ravanelli Mirco and Dr. Parcollet Titouan. There is no legal institution associated as an <em> owner </em> of SpeechBrain.
                 Furthermore, and due to the Apache Licence, anyone that would disagree with the way the project is being run can fork it and start a new toolkit as long as its name isn't SpeechBrain.</p>
@@ -115,7 +117,7 @@
             <div class="main_title">
               <h2>Sponsors</h2>
               <p class="justified large">
-                 Sponsoring allows us to further expand the SpeechBrain team highly increasing the number of new features coming out. It also helps ensuring high quality standards by being able to properly manage the various issues and pull requests coming from the community.
+                 Sponsoring allows us to further expand the SpeechBrain team highly increasing the number of new features coming out. It also helps to ensure high quality standards by being able to properly manage the various issues and pull requests coming from the community.
                  If interested do not hesitate to contact us via <a href="mailto:speechbrainproject@gmail.com"> e-mail </a>.
               </p>
               <div class="grid_container">
@@ -131,7 +133,8 @@
 
             <div class="main_title">
               <h2>Partners</h2>
-              <p class="justified large"> Partners are organizations that have accepted to collaborate within SpeechBrain by dedicating important human or hardware resources. They are involved in the decision process by participating in meetings. </p>
+              <p class="justified large"> Partners are organizations that dedicate important human (or hardware resources) to the SpeechBrain project.
+                They are involved in the decision process by participating in meetings. </p>
               <div class="grid_container">
                 <div class="grid">
                   <div><img src="img/partners/logo_lia.png" alt=""></div>
@@ -141,16 +144,15 @@
               </div>
             </div>
             <div class="main_title">
-              <h2>Initial contributors</h2>
-              <p class="justified large"> In this section we thanks all the peoples that contributed to the very first version of SpeechBrain. It took us a year of development to finally
-              propose this toolkit.</p>
+              <h2>Contributors</h2>
+              <p class="justified large"> In this section we thanks all the peoples that contributed to SpeechBrain. </p>
             </div>
             <ul class="contributors-list">
               <li>Mirco Ravanelli, MILA, Montréal (CA)</li>
               <li>Titouan Parcollet, Avignon Université (LIA, FR)</li>
               <li>Aku Rouhe, Aalto University (FI)</li>
               <li>Peter Plantinga, Ohio State University (USA)</li>
-              <li>Elena Rastorgueva, Amazon</li>
+              <li>Elena Rastorgueva</li>
               <li>Loren Lugosch, Mila, McGill University (CA)</li>
               <li>Nauman Dawalatabad, Indian Institute of Technology Madras (IN)</li>
               <li>Ju-Chieh Chou, National Taiwan University (TW)</li>
@@ -164,6 +166,9 @@
               <li>Yan Gao, University of Cambridge (UK)</li>
               <li>Szu-Wei Fu, Academia Sinica (TW)</li>
               <li>Cem Subakan, Mila, University of Montréal (CA)</li>
+              <li>Jianyuan Zhong, University of Rochester (USA)<li>
+              <li>Brecht Desplanques, Ghent University (BE)<li>
+              <li>Jenthe Thienpondt, Ghent University (BE)<li>
               <li>Renato De Mori, University of McGill (CA), Avignon University (LIA, FR)</li>
               <li>Yoshua Bengio, Mila, University of Montréal (CA)</li>
             </ul>
