--- a/tutorial_basics.html
+++ b/tutorial_basics.html
@@ -45,7 +45,6 @@
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials</a>
 									<ul class="dropdown-menu">
                     <li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
-										<li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
 									</ul>
 								</li>
@@ -170,7 +169,31 @@
                                   </div>
                                 </div>
                             </article>
-
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">SpeechBrain Basics</a>
+                                        </div>
+                                        <ul class="blog_meta list">
+                                            <li><a href="about.html">Rouhe A.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: easy<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 15min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                  <div class="blog_post">
+                                      <div class="blog_details">
+                                          <h2>Checkpointing</h2>
+                                          <p>By checkpointing, we mean saving the model and all the other necessary state information
+                                            (like optimizer parameters, which epoch and which iteration), at a particular point in time.</p>
+                                          <a href="https://colab.research.google.com/drive/1VH7U0oP3CZsUNtChJT2ewbV_q1QX8xre?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                      </div>
+                                  </div>
+                                </div>
+                            </article>
                             <nav class="blog-pagination justify-content-center d-flex">
 		                        <ul class="pagination">
 		                            <li class="page-item">
