--- a/tutorial_processing.html
+++ b/tutorial_processing.html
@@ -45,7 +45,6 @@
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials</a>
 									<ul class="dropdown-menu">
                     <li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
-										<li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
                     <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
 									</ul>
 								</li>
@@ -163,6 +162,32 @@
                                               we have 16000 samples for each second. Working with such very high dimensional data can be critical from a machine learning perspective.
                                               The goal of feature extraction is to find more compact ways to represent speech.</p>
                                             <a href="https://colab.research.google.com/drive/1CI72Xyay80mmmagfLaIIeRoDgswWHT_g?usp=sharing" class="blog_btn">Open in Google Colab</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+                            <article class="row blog_item">
+                               <div class="col-md-3">
+                                   <div class="blog_info text-right">
+                                        <div class="post_tag">
+                                            <a class="active" href="#">Speech Processing</a>
+                                        </div>
+                                        <ul class="blog_meta list">
+                                            <li><a href="about.html">Ravanelli M.<i class="lnr lnr-user"></i></a></li>
+                                            <li><a href="#">Feb. 2021<i class="lnr lnr-calendar-full"></i></a></li>
+                                            <li><a href="#">Difficulty: medium<i class="lnr lnr-cog"></i></a></li>
+                                            <li><a href="#">Time: 20min<i class="lnr lnr-hourglass"></i></a></li>
+                                        </ul>
+                                    </div>
+                               </div>
+                                <div class="col-md-9">
+                                    <div class="blog_post">
+                                        <div class="blog_details">
+                                            <h2>Environmental corruption</h2>
+                                            <p>In realistic speech processing applications, the signal recorded by the microphone is corrupted by noise and reverberation. 
+                                              This is particularly harmful in distant-talking (far-field) scenarios, where the speaker and the reference microphone are distant
+                                              (think about popular devices such as Google Home, Amazon Echo, Kinect, and similar devices).</p>
+                                            <a href="https://colab.research.google.com/drive/1mAimqZndq0BwQj63VcDTr6_uCMC6i6Un?usp=sharing" class="blog_btn">Open in Google Colab</a>
                                         </div>
                                     </div>
                                 </div>
