Update wording a bit

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
               <p class="justified large"> Contributions can take various forms:<br/>
                   1. Researchers can propose and implement new functionalities through pull requests. To ensure high-quality standards, each new pull request will be reviewed by a core team member.<br/>
                   2. Sponsors can contribute financially or with human resources by contacting us via <a href="mailto:speechbrainproject@gmail.com"> email </a><br/><br/>
-                  <b>SpeechBrain needs you to evolve!</b>
+                  <b>SpeechBrain needs you in order to evolve!</b>
               </p>
 
             </div>
