--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
 								<div class="col-lg-6">
 									<div class="left_side_text">
 										<h3>Adapts to your needs.</h3>
-										<h6>SpeechBrain allows users to install either via PyPI to rapidly use the standard library and a local install to further expand the features of the toolkit.</h6>
+										<h6>SpeechBrain allows users to install either via PyPI to rapidly use the standard library or via a local install to view recipes and further explore the features of the toolkit.</h6>
 										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
 									</div>
 								</div>
 								<div class="col-lg-6">
 									<div class="chart_img">
-										<pre><code class="text">
+										<pre><code class="bash">
   # From PyPI
   pip install SpeechBrain
 
@@ -216,7 +216,6 @@
 
   # Train the model with a hyperparameter tweak
   python train.py hparams/train.yaml --learning_rate=0.1
-
                     </code></pre>
 									</div>
 								</div>
