--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 
   # Local installation
   git clone https://github.com/speechbrain/speechbrain.git
+  cd speechbrain
   pip install -r requirements.txt
   pip install --editable .
                     </code></pre>
